src/styles/index.css
@import "tailwindcss";
@source "../../node_modules/@ferrucc-io/emoji-picker";

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@font-face {
  font-family: "Albert Sans";
  src: url("../assets/fonts/AlbertSans-VariableFont_wght.ttf")
    format("truetype");
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@theme {
  --font-albert: "Albert Sans", sans-serif;
  --color-primary: #694cf1;
  --color-background: rgba(255, 255, 255, 0.4);
  --color-dark-theme-text: var(--color-blue-200);
  /* --color-border-light: color-mix(in srgb, var(--color-white) 10%, transparent); */
  --color-light-border: rgba(255, 255, 255, 0.5);
  --color-dark-border: rgba(255, 255, 255, 0.07);
}

html,
body {
  /* disables mobile browser overscroll actions (refresh / bounce) */
  overscroll-behavior: none;
}

@utility flex-center {
  @apply flex items-center justify-center;
}
@utility bg-blur {
  @apply border-light-border dark:border-dark-border dark:bg-background/10 border backdrop-blur-md;
}
@utility focus-primary {
  @apply ring-primary focus-within:ring-2 focus:outline-none focus-visible:ring-2;
}
@utility transition-animation {
  @apply transition-all duration-200;
}
@utility card-element {
  @apply flex-center bg-blur absolute h-[82%] w-full flex-col justify-start rounded-3xl px-4 py-2 transition-all duration-300;
}

@layer components {
  .custom-time::-webkit-calendar-picker-indicator {
    filter: invert(45%);
  }
  [data-theme="dark"] .custom-time::-webkit-calendar-picker-indicator {
    filter: invert(88%) sepia(14%) saturate(1329%) hue-rotate(183deg)
      brightness(103%) contrast(99%);
  }

  .btn {
    @apply flex-center focus-primary transition-animation border-light-border dark:border-dark-border min-h-0 shrink-0 scale-100 cursor-pointer gap-x-1.5 rounded-full border p-2 text-xs opacity-100 hover:ring-2;
    @starting-style {
      @apply scale-0 opacity-0;
    }
  }
  .btn-circle {
    @apply bg-blur h-10 w-10;
  }
  .btn-circle-menu {
    @apply bg-background dark:bg-blur h-10 w-10;
  }
  .btn-circle-sm {
    @apply bg-background/50 dark:bg-background/15 h-8 w-8;
  }
  .btn-circle-xs {
    @apply bg-blur h-5 w-5 p-1;
  }
  .btn-capsule {
    @apply bg-blur dark:text-dark-theme-text h-10 w-fit shrink px-4 text-nowrap hover:px-5;
  }
  .btn-capsule-current {
    @apply bg-background dark:bg-blur dark:text-dark-theme-text h-10 w-fit shrink px-4 text-nowrap hover:px-5;
  }
  .btn-capsule-add-task {
    @apply bg-primary dark:text-dark-theme-text h-10 w-fit shrink px-4 text-nowrap text-white hover:px-5;
  }
  .btn-navigate-right {
    @apply border-none bg-none hover:ml-1 hover:bg-white/20 hover:ring-0 focus-visible:bg-white/20;
  }
  .btn-navigate-left {
    @apply border-none bg-none hover:mr-1 hover:bg-white/20 hover:ring-0 focus-visible:bg-white/20;
  }
  .btn-popover {
    @apply bg-background dark:bg-blur h-10 w-20;
  }
  .btn-create-task {
    @apply bg-primary hover:scale-95 hover:bg-violet-600 hover:ring-0;
  }
  .btn-close {
    @apply bg-primary absolute top-3 right-3 h-7 w-7 p-1.5 hover:scale-95 hover:bg-violet-600 hover:ring-0;
  }
  .btn-theme {
    @apply dark:bg-blur dark:text-dark-theme-text bg-background px-2 py-1 hover:px-2.5;
  }
  .btn-theme-selected {
    @apply bg-primary dark:text-dark-theme-text px-2 py-1 text-white hover:px-2.5;
  }
  .btn-install {
    @apply bg-primary dark:text-dark-theme-text h-10 w-full text-sm text-white;
  }
  .btn-capsule-cancel {
    @apply bg-blur dark:text-dark-theme-text h-8 w-fit shrink px-4 text-nowrap hover:px-5;
  }
  .btn-capsule-delete {
    @apply dark:text-dark-theme-text h-8 w-fit shrink bg-red-500/70 px-4 text-nowrap text-white hover:px-5;
  }
  .btn-capsule-add {
    @apply bg-primary h-8 w-fit shrink px-4 text-nowrap text-white hover:px-5;
  }
  .date-navigation-capsule-container {
    @apply flex-center bg-blur h-10 min-h-0 w-auto shrink-0 cursor-auto justify-between gap-x-3 rounded-full p-1;
  }
  .capsule-container {
    @apply flex-center bg-blur h-10 min-h-0 w-full cursor-auto justify-between rounded-full px-4 text-xs;
  }
  .capsule-version-container {
    @apply flex-center bg-blur h-10 min-h-0 w-full gap-x-1.5 rounded-full bg-none px-4 text-xs;
  }
}

@layer utilities {
  .app-outter-container {
    @apply font-albert flex h-screen min-h-0 w-screen items-center justify-center bg-neutral-200 font-bold select-none dark:bg-black;
  }
  .app-inner-container {
    @apply flex h-full min-h-0 w-[30%] flex-col px-4 py-3 max-lg:w-1/2 max-md:w-1/2 max-sm:w-full;
  }
  .header-row-container {
    @apply flex items-center justify-between py-2;
  }
  .main-container {
    perspective: 1000px;
    @apply my-2 min-h-0 w-full flex-1;
  }
  .cards-container {
    @apply flex-center relative h-full w-full flex-col overflow-hidden;
  }
  .footer-container {
    @apply flex-center min-h-0 w-full justify-between py-2;
  }
  .header-title {
    @apply flex-center dark:text-dark-theme-text justify-start gap-2 rounded-full px-3 py-1 focus:outline-none;
  }

  .card {
    position: absolute;
    top: 100%;
    scale: 0.92;
    /* transition: all 0.3s ease; */
  }

  .card.prev {
    top: 0%;
  }

  .card.prev .current-task-timer-active {
    @apply bg-background/50 text-black;
  }

  .card.prev.time {
    @apply bg-black;
  }

  .card.active {
    top: 15.8%;
    scale: 1;
  }

  .card.next {
    top: 84%;
  }

  .current-task-timer {
    @apply transition-animation border-light-border dark:border-dark-border bg-background/50 dark:bg-background/15 dark:text-dark-theme-text w-24 scale-100 rounded-full border py-1.5 text-center text-sm font-bold tracking-wider opacity-100;
    @starting-style {
      @apply scale-0 opacity-0;
    }
  }

  .current-task-timer-active {
    @apply bg-primary dark:text-dark-theme-text text-white;
  }

  .modal-container {
    @apply font-albert bg-background border-light-border dark:border-dark-border fixed inset-0 z-10 m-auto h-fit max-h-[80%] w-[28%] overflow-y-auto rounded-3xl border px-4 py-3 text-sm font-bold shadow-lg backdrop-blur-md focus:outline-none max-lg:w-[46%] max-sm:w-11/12 dark:bg-black/50;
  }
  .menu-row-container {
    @apply flex w-full gap-2 font-medium;
  }
  .accordion-summary {
    @apply bg-blur dark:text-dark-theme-text flex-center ring-primary transition-animation focus-primary h-10 min-h-0 w-full cursor-pointer justify-start gap-x-2 rounded-full px-4 text-xs duration-200 select-none hover:ring-2;
  }
  .accordian-details {
    @apply bg-blur dark:text-dark-theme-text my-2 w-full rounded-2xl px-4 py-2.5 text-xs;
  }

  .create-task-form {
    @apply my-2 flex flex-col gap-3 rounded-2xl text-xs font-medium focus:outline-none;
  }
  .form-row-container {
    @apply flex w-full items-stretch gap-2;
  }
  .form-input {
    @apply bg-blur focus-primary border-light-border dark:border-dark-border dark:placeholder:text-dark-theme-text/50 dark:text-dark-theme-text h-10 w-full rounded-full border px-4;
  }
  .form-container-pomodoro {
    @apply bg-background dark:bg-blur flex-center border-light-border dark:border-dark-border dark:text-dark-theme-text h-8 w-full justify-start gap-1 rounded-2xl border px-4 py-4 text-center text-xs;
  }
  .form-input-pomodoro {
    @apply focus-primary flex-center text-primary ml-4 h-6 w-10 rounded-lg text-center;
  }

  .day-select {
    @apply flex-center peer-checked:bg-primary peer-checked:hover:bg-background dark:peer-checked:hover:bg-background/25 ring-primary bg-background dark:text-dark-theme-text/50 dark:bg-blur rounded-xl px-2 py-1 text-xs peer-checked:border-transparent peer-checked:text-white hover:ring-2 peer-checked:hover:text-neutral-500 peer-checked:hover:ring-0;
  }
  .color-dot {
    @apply ring-primary border-light-border dark:border-dark-border flex h-6 w-6 cursor-pointer rounded-full border peer-checked:ring-2 hover:ring-2;
  }

  .todo-checkbox-large {
    @apply flex-center peer-checked:bg-primary mt-0.5 h-4 w-4 shrink-0 rounded-full border border-black text-transparent transition-all peer-checked:border-none peer-checked:text-white;
  }
  .todo-text {
    @apply decoration-primary/70 text-sm text-black decoration-2 peer-checked:line-through;
  }
  .todo-checked {
    @apply bg-primary text-white border-none;
  }

  .shortcuts-li {
    @apply flex-center w-full justify-start gap-1.5;
  }
  .shortcuts-kbd {
    @apply bg-primary flex-center border-light-border dark:border-dark-border dark:text-dark-theme-text h-8 w-8 shrink-0 rounded-full border text-white;
  }
  .shortcuts-des {
    @apply bg-blur flex-center border-light-border dark:text-dark-theme-text dark:border-dark-border h-8 w-full shrink justify-start rounded-full border px-4 text-xs text-nowrap;
  }

  .btn-popover[popovertarget="taskCountPopover"] {
    anchor-name: --popover-button-tasks;
  }
  .popover-body.popover-task-count {
    position-anchor: --popover-button-tasks;
    left: anchor(left);
  }
  .btn-popover[popovertarget="taskPercentagePopover"] {
    anchor-name: --popover-button-progression;
  }
  .popover-body.popover-task-percentage {
    position-anchor: --popover-button-progression;
    left: auto;
    right: anchor(right);
  }
  .popover-body {
    top: anchor(bottom);
    transition:
      display 200ms,
      opacity 200ms;
    transition-behavior: allow-discrete;
    @apply bg-blur bg-background dark:bg-primary/10 dark:text-dark-theme-text transition-animation mt-2 w-44 translate-y-0 scale-100 rounded-2xl px-4 py-2.5 text-xs opacity-100 focus:outline-none;
    @starting-style {
      @apply -translate-y-full scale-0 opacity-0;
    }
  }

  .popover-wrapper:has(.popover-body:popover-open) .btn-popover {
    @apply ring-primary ring-2;
  }

  .enter-transition {
    @apply transition-animation translate-y-0 scale-100 opacity-100;
    @starting-style {
      @apply -translate-y-full scale-0 opacity-0;
    }
  }
}

